--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
     "styled-components": "^6.0.8"
