--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
