--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@tanstack/react-query": "^5.14.2",
     "nanoid": "^5.0.1",
     "pocketbase": "^0.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-router-hash-link": "^2.4.3",
     "react-toastify": "^9.1.3",
