--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@tanstack/react-query": "^5.14.2",
+    "happy-dom": "^14.11.0",
     "nanoid": "^5.0.1",
     "pocketbase": "^0.20.1",
     "react": "^18.2.0",
