--- a/package.json
+++ b/package.json
@@ -32,17 +32,20 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-router-hash-link": "^2.4.7",
     "@types/styled-components": "^5.1.28",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-styled-components-a11y": "^2.1.35",
     "jsdom": "^24.0.0",
     "msw": "^2.3.0",
     "prettier": "3.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "5.4.6",
     "vitest": "^1.4.0"
   }
 }
