--- a/package.json
+++ b/package.json
@@ -48,5 +48,10 @@
     "typescript": "^5.0.2",
     "vite": "5.4.6",
     "vitest": "^1.4.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
